# adventofcode

./: README.md
2015/: day1.pl  day10.pl  day11.pl  day12.pl  day13.pl  day14.pl  day15.pl  day16.pl  day17.pl  day18.pl  day19.pl  day2.pl  day20.pl  day21.pl  day22.pl  day23.pl  day24.pl  day25.pl  day3.pl  day4.pl  day5.pl  day6.pl  day7.pl  day8.pl  day9.pl
2016/: Cargo.toml
2016/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
2017/: Aoc2017.fsproj  Aoc2017.sln  Day1.fs  Day10.fs  Day11.fs  Day12.fs  Day13.fs  Day14.fs  Day15.fs  Day16.fs  Day17.fs  Day18.fs  Day19.fs  Day2.fs  Day20.fs  Day3.fs  Day4.fs  Day5.fs  Day6.fs  Day7.fs  Day8.fs  Day9.fs  Program.fs  Util.fs
2017/data/: answers1.txt  answers10.txt  answers14.txt  answers15.txt  answers17.txt  answers18.txt  answers19.txt  answers2.txt  answers20.txt  answers4.txt  answers7.txt  answers8.txt  answers9.txt
