[package]
name = "aoc2016"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"

[dependencies.regex]
version = "1.5.4"
default-features = false
# Keep dependencies/compile time/code size to a minimum
features = ["std"]